Fixed z-index bug

--- a/css/style-v1.css
+++ b/css/style-v1.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 99999;
+  z-index: 100;
   font-size: 1.5em;
   color: #ffcc00;
   text-align: center;
